03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuboard-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kuboard
    k8s.kuboard.cn/workload: kuboard
    nginx.org/websocket-services: "kuboard"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: sc-sh-development.npool.top
    http:
      paths:
      - path: /kuboard(/|$)(.*)
        backend:
          serviceName: kuboard
          servicePort: http
